# presentation

./: .gitignore  .travis.yml  README.rst  build.sh
.github/workflows/: build.yml
UNCECOMP_2023/: uncecomp_2023_slides_OpenTURNS.bcf  uncecomp_2023_slides_OpenTURNS.run.xml  uncecomp_2023_slides_OpenTURNS.tex
UNCECOMP_2023/figures/: Thumbs.db
applibugs2023/: applibugs-2023-slides_OpenTURNS_MetropolisHastings.tex  codes.ipynb
bepu2024/bepu2024-MCMC/: bepu-2024-slides_OpenTURNS_MetropolisHastings.tex
bepu2024/bepu2024-general/: bepu-2024-slides-OpenTURNS.tex
chorus-2017-otfmi/: .gitignore  abstraction_layer.tex  chorus-2017-otfmi.bcf  chorus-2017-otfmi.run.xml  chorus-2017-otfmi.tex  comparison.tex  graphiques.sty  local.sty  macros.tex
chorus-2017-otfmi/figure/: phi.pbm  rcsetup.py  rcsetup_square.py  rcsetup_thumbnail.py
chorus-2017-otfmi/python/: instantiate.py
developer/agenda/: agenda.tex
developer/architecture/: Math_Notations.sty  architecture.tex
developer/doc_development/: doc_development.tex
developer/library_development/: library_development.tex
developer/module_development/: module_development.tex
developer/overview/: GlobalPicture.fig  overview.tex
developer/python_function/: Fonction symbolique.ipynb  Python functions - Overview.ipynb  README.txt  build.sh  python_function.tex  wrapper-python-benchmark.py
developer/tps/: tps.tex
euroscipy-2017/: euroscipy-2017.tex  macros.tex
euroscipy2017/: .gitignore  euroscipy2017-OpenTURNS.tex  macros.tex
lowranktensor/: lowranktensor.tex  macros.tex
ot-devel-2011/: Agenda.aux  Agenda.nav  Agenda.out  Agenda.tex  idees.txt
ot-devel-2011/TPs/Denis/integralcompoundpoisson/python/: IntegralCompoundPoisson.i  IntegralUserDefinedFactory.i  Makefile.am  Makefile.in  integralcompoundpoisson.pth
ot-devel-2011/TPs/Denis/integralcompoundpoisson/python/test/: CMakeLists.txt  Makefile.am  atlocal.in  python_installcheck_testsuite.at  t_IntegralCompoundPoisson_validation.atpy  t_IntegralCompoundPoisson_validation.py
ot-devel-2011/TPs/Denis/integralcompoundpoisson/src/: IntegralCompoundPoisson.cxx  IntegralCompoundPoisson.hxx  IntegralUserDefined.cxx  IntegralUserDefinedFactory.cxx  IntegralUserDefinedFactory.hxx  Makefile.am  Makefile.in
ot-devel-2011/TPs/Denis/integralcompoundpoisson/test/: Makefile.am  Makefile.in  atconfig.in  check_testsuite.at  t_IntegralCompoundPoisson_std.at  t_IntegralCompoundPoisson_std.cxx  t_IntegralUserDefinedFactory_std.at  t_IntegralUserDefinedFactory_std.cxx  t_IntegralUserDefined_std.at  t_IntegralUserDefined_std.cxx
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/: Doxyfile.in  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  customize
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/.svn/: all-wcprops  entries
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/.svn/text-base/: CONF.in.svn-base  Makefile.am.svn-base  bootstrap.svn-base  configure.ac.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/config/: Makefile.am  Makefile.in  common.am  test.am
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/config/.svn/: all-wcprops  entries
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/config/.svn/prop-base/: Makefile.am.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/config/.svn/text-base/: common.am.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/m4/: Makefile.am  Makefile.in  ac_pkg_swig.m4  ac_python_devel.m4  ot_check_dot.m4  ot_check_doxygen.m4  ot_check_openturns.m4  ot_check_openturns_module.m4  ot_check_python.m4  ot_check_python_packages.m4  ot_check_r.m4  ot_check_r_bitmap.m4  ot_check_r_package.m4  ot_check_r_packages.m4  ot_check_swig.m4  ot_debug.m4
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/m4/.svn/: all-wcprops  entries
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/m4/.svn/text-base/: Makefile.am.svn-base  ac_pkg_swig.m4.svn-base  ac_python_devel.m4.svn-base  ot_check_dot.m4.svn-base  ot_check_doxygen.m4.svn-base  ot_check_openturns.m4.svn-base  ot_check_python.m4.svn-base  ot_check_r_package.m4.svn-base  ot_check_swig.m4.svn-base  ot_debug.m4.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/python/: Makefile.am  Makefile.in  UniformSphericalRandomVector.i
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/python/.svn/: all-wcprops  entries
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/python/.svn/text-base/: Makefile.am.svn-base  MyClassImplementation.i.svn-base  myclass.i.svn-base  myclass.pth.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/src/: Makefile.am  Makefile.in  UniformSphericalRandomVector.cxx
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/src/.svn/: all-wcprops  entries
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/src/.svn/text-base/: Makefile.am.svn-base  MyClass.cxx.svn-base  MyClass.hxx.svn-base  MyClassImplementation.cxx.svn-base  MyClassImplementation.hxx.svn-base
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/test/: Makefile.in
ot-devel-2011/TPs/Karina/essai_openturns/mon_module/trunk/test/.svn/: all-wcprops  entries
siamuq2018/: OpenTURNS-PopelinBaudin_SIAM-UQ-2018.pptx
siamuq2020/: siamuq-2020-slides-OpenTURNS.tex
siamuq2022/: siamuq-2022-slides-OpenTURNS.bib  siamuq-2022-slides-OpenTURNS.tex
siamuq2024/: siamuq-2024-slides-OpenTURNS.tex
ud2019persalys/: .~lock.journee_OT_2019_06_07_Phimeca.pptx#  journee_OT_2019_06_07_Phimeca.pptx
ud2020persalys/: .gitignore  UsersDay-2020-PERSALYS.tex
uncecomp2023/: macros.tex  uncecomp_2023_slides_OpenTURNS.tex
userday2015/: UsersDay_OpenTURNS_12juin_2015.ppt
userday2016/: .~lock.UsersDay_OpenTURNS_21juin_2016.ppt#  JU_OT9_Intro_YALAMAS.pptx  UsersDay_OpenTURNS_21juin_2016.ppt
userday2017/: JUOT - OT et PV - Juin 2017-v6.pptx  UsersDay_OpenTURNS_6juin_2017.ppt
(+210 files in other folders)
