#                                               -*- Makefile -*-
#
#  Makefile.am
#
#  (C) Copyright 2005-2007 EDF-EADS-Phimeca
#
#  This library is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License.
#
#  This library is distributed in the hope that it will be useful
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
#  @author: $LastChangedBy: dutka $
#  @date:   $LastChangedDate: 2007-09-25 12:38:48 +0200 (Tue, 25 Sep 2007) $
#  Id:      $Id: Makefile.am 541 2007-09-25 10:38:48Z dutka $
#
include $(top_srcdir)/config/common.am

AUX_DIST = \
	config.guess \
	config.sub \
	install-sh \
	ltconfig \
	ltmain.sh \
	mdate.sh \
	missing \
	mkinstalldirs \
	depcomp

MAINTAINERCLEANFILES = $(AUX_DIST)
